objects/University__c.object
<CustomObject><fields>
        <fullName>Category__c</fullName>
        <description>双一流类型</description>
        <inlineHelpText>双一流类型</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>A类：双一流大学</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B类：双一流大学</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C类： 学科一流大学</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields><fields>
        <fullName>CodeName__c</fullName>
        <description>学校代码</description>
        <inlineHelpText>学校代码</inlineHelpText>
        <label>代码</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Nickname__c</fullName>
        <description>大学简称</description>
        <inlineHelpText>大学简称</inlineHelpText>
        <label>简称</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>双一流大学</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>University</label><nameField>
        <label>University Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Universities</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Nickname__c</columns>
        <columns>CodeName__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews></CustomObject>